# optmus

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml
backend/: .env.production.example  Dockerfile  pyproject.toml
backend/sql/: 001_init.sql  002_billing_init.sql  003_billing_cycle.sql  004_billing_operational.sql  005_billing_usage_unit_pricing.sql  006_billing_invoice_status_transitions.sql  007_billing_scheduler_runs.sql  008_api_keys.sql  migrate_admin_bcrypt.py
backend/src/optimus_backend/: main.py
backend/tests/: test_analyst_plan_validation.py  test_api_key_auth_dependency.py  test_api_key_routes.py  test_api_key_scopes.py  test_api_keys_use_case.py  test_auth_dependencies.py  test_auth_route.py  test_auth_use_case.py  test_billing_cycle_closer.py  test_billing_routes.py  test_billing_scheduler.py  test_billing_store.py  test_budget_enforcer.py  test_capability_tools.py  test_context_builder.py  test_engineering_report_route.py  test_engineering_tools.py  test_execution_use_cases.py  test_git_local_source_connector.py  test_health_route.py  test_idempotency.py  test_kaiso_tools.py  test_lock_manager.py  test_memory_versioning.py  test_rate_limiter.py  test_repo_ranking.py  test_scenario_catalog.py  test_scenarios_integration_contract.py  test_scenarios_payload_limits.py  test_tenant_middleware.py  test_tenant_rate_limiter.py  test_tenant_resolution.py  test_tool_executor.py  test_usage_meter_provider_selection.py  test_usage_metering.py
backend/tests/integration/: test_billing_cycle_concurrency.py  test_generic_scenarios_runtime.py  (+1 more)
(+124 files in other folders)
